remove the space